# customer_churn_prediction

./: .dockerignore  .env.example  .gitignore  Dockerfile  data_loader.py  docker-compose.yaml  predict.py  preprocessing.py  pyproject.toml  requirements.txt
.github/: CICD_SETUP.md
.github/workflows/: cd.yaml  ci.yaml  ci.yml  deploy.yml  training.yml
api/: .dockerignore  Dockerfile  config.py  main.py  predictor.py  requirements.txt  schemas.py
configs/: config.yaml
notebooks/: 01_data_exploration.ipynb
notifications/: telegram.py
pipelines/: train_pipeline.py
src/data/: loader.py
src/evaluation/: evaluator.py
src/features/: preprocessor.py
src/models/: production.py  trainer.py  tuner.py
src/utils/: __init__.py  helpers.py
tests/: test_api.py  test_data_loader.py  test_preprocessor.py
training/: data_loader.py  final_model.py  hyperparameter_tuning.py  model_evaluation.py  model_trainer.py  preprocessing.py  save_preprocessor.py  train_with_mlflow.py
training/models/: preprocessor.pkl  random_forest_results.json
training/models/production/: feature_importance.json  model_metadata.json
training/models/tuned/: best_parameters_20260206_144557.json  random_forest_cv_results.csv
training/results/: detailed_results_20260210_150216.json  training_results_20260206_144110.csv
training/results/evaluation/Random_Forest_(Tuned)_20260206_144754/: metrics.json
ui/: app.py
